tests/baselines/reference/newOnInstanceSymbol.errors.txt
newOnInstanceSymbol.ts(3,5): error TS2351: This expression is not constructable.
  Type 'C' has no construct signatures.


==== newOnInstanceSymbol.ts (1 errors) ====
    class C {}
    var x = new C(); // should be ok
    new x(); // should error
        ~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'C' has no construct signatures.